
  [ Samuel Thibault ]
  * Add debian/patches/hurd-i386/local-_dl_random.diff to fix build on
    hurd-i386.
  * Add debian/patches/hurd-i386/local-unwind-resume.diff to fix build on
    hurd-i386.
  * Fix debian/patches/hurd-i386/local-tls-support.diff to align up includes
    on Linux, to fix build.
  * Apply kfreebsd/local-no-SOCK_NONBLOCK.diff on hurd-i386 to fix build too.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 18 Aug 2009 21:39:16 +0200

eglibc (2.9-24) UNRELEASED; urgency=low

  [ Aurelien Jarno ]
  * Remove any/cvs-pthread_mutex_lock.diff following upstream decision.
  * Replace debian/sysdeps/depflags.{mk,pl} by entries in debian/control
    using the "new" dpkg-dev features. Clean-out some very old entries.
  * Recommends libc6-i686 on amd64 and libc0.1-i686 on kfreebsd-amd64
    (Closes: bug#455603).
  * Don't access dpkg files directly in libc6.preinst.
  * patches/any/local-ld-multiarch.diff: convert i586 and i686 into i486
    (Closes: bug#540646).
  * debian/rules.d/debhelper.mk: use dh_lintian instead doing the work
    manually.
  * Split out libc-bin from libc6 and libc-dev-bin from libc6-dev.
    (Closes: #330735).

  [ Petr Salinger ]
  * kfreebsd/local-sysdeps.diff: update to revision 2696 (from glibc-bsd).

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 10 Aug 2009 14:32:35 +0200

eglibc (2.9-23) unstable; urgency=low

  * debhelper.in/libc.postinst, sysdeps/depflags.pl: remove upgrade code
    for pre-etch installations.
  * Don't ship /etc/init.d/glibc.sh anymore: the GNU libc is now smart
    enough to print "FATAL: kernel too old" alone. This also speed up
    the boot a bit.
  * Don't ship /usr/share/doc/libc6/TODO, but keep the file in the 
    sources.
  * Don't ship /usr/share/doc/libc6/{README,PROJECT}.gz, they are 
    irrelevant for an already built GNU libc.
  * Move /usr/share/doc/libc6/{CONFORMANCE,NAMESPACE,NOTES}.gz to
    libc6-dev.
  * Move all upstream changelogs in glibc-docs, and install a small