@@ -122,6 +122,7 @@ eglibc (2.10.1-0exp1) experimental; urgency=low
   * Fix debian/patches/hurd-i386/local-tls-support.diff to align up includes
     on Linux, to fix build.
   * Apply kfreebsd/local-no-SOCK_NONBLOCK.diff on hurd-i386 to fix build too.
+  * Convert config_os' gnu-gnu into gnu to fix multiarch paths.
 
  -- Aurelien Jarno <aurel32@debian.org>  Tue, 18 Aug 2009 21:39:16 +0200
 
